# tg-likes-bot

./: .dockerignore  .gitignore  .releaserc.json  Dockerfile  README.md  deployment-template.yaml  docker-compose.yml  example.env  periodic_tasks.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.cfg
.github/workflows/: ci.yml
app/: bot.py  config.py  db.py  dispatcher.py  factories.py  helpers.py  models.py  schemas.py  tasks.py
app/config/: bot.py  celery.py  settings.py
k8s/: deployment-template.yaml
migrations/models/: 0_20230223164349_init.py  1_20230303011503_update.py  2_20230304160436_update.py  3_20230304160519_update.py
scripts/: lint.sh  test.sh
tests/: conftest.py  test_bot.py  test_models.py  test_tasks.py
