[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sergey Baboshin <ijustbsd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
pytest = "^7.4.4"
pytest-asyncio = "0.20.3"
aerich = "0.7.1"
pydantic = "^1"
aiogram = "^2"
python-dotenv = "^1.0.0"
freezegun = "^1.4.0"
factory-boy = "^3.3.0"
tortoise-orm = "0.19.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
isort = "^5.13.2"
black = "^23.12.1"
mypy = "1.0.1"
flake8 = "^7.0.0"

[tool.aerich]
tortoise_orm = "app.config.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
line_length = 120
profile = "black"
src_paths = ["app"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
